fix ring-btn_icon vertical align
Former-commit-id: 6ac450f6acbbe8fc1637e2de55e347f9e57d10e2

--- a/blocks/btn/_btn.scss
+++ b/blocks/btn/_btn.scss
@@ -218,7 +218,7 @@ $ring-btn-border-radius: 3px;
   color: #c10000;
 }
 
-.ring-btn_icon {
+.ring-btn_icon:not([class*="ring-menu"]) {
   position: relative;
   top: 1px;
   font-size: 13px;
